src/app.css
@import url('http://fonts.cdnfonts.com/css/gismonda-fg');
@import url('http://fonts.cdnfonts.com/css/gruppo');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	h1,
	h2,
	h3,
	h4 {
		@apply font-bold;
	}
}

:root {
	font-family: 'Gismonda FG', sans-serif;
	--pure-white: #ffffff;
	--primary-color: #a663ac;
	--secondary-color: #502d73;
	--tertiary-color: #31142c;
	--accent-color: #74e6e0;
	--heading-color: rgba(255, 255, 255, 0.7);
	--text-color: #ffffff;
	--column-width: 42rem;
	--column-margin-top: 4rem;
}

html {
	scroll-behavior: smooth !important;
}

body {
	font-family: 'Gruppo';
	min-height: 100vh;
	font-size: calc(22px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
	margin: 0;
	background-color: var(--primary-color);
	background: linear-gradient(
		180deg,
		var(--primary-color) 0%,
		var(--secondary-color) 10.45%,
		var(--tertiary-color) 51.35%,
		var(--primary-color) 81.35%
	);
}

body::before {
	content: '';
	width: 80vw;
	height: 100vh;
	position: absolute;
	top: 0;
	left: 10vw;
	z-index: -1;
	background: radial-gradient(
		50% 50% at 50% 50%,
		var(--pure-white) 0%,
		rgba(255, 255, 255, 0) 100%
	);
	opacity: 0.05;
}

#svelte {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}

h1,
h2,
h3 {
	color: var(--text-color);
	text-transform: uppercase;
	font-family: 'Gismonda FG', sans-serif;
}

p {
	font-weight: 500;
	color: var(--text-color);
}

p {
	line-height: 1.5;
}

a {
	color: var(--accent-color);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

input,
button {
	font-size: inherit;
	font-family: inherit;
}

button:focus:not(:focus-visible) {
	outline: none;
}

